--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.name=example
 #spring.jpa.show-sql=true
 
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/authdtb
-spring.datasource.username=root
-spring.datasource.password=locations
+#spring.datasource.url=jdbc:mariadb://localhost:3306/authdtb
+#spring.datasource.username=root
+#spring.datasource.password=locations
