--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>microservice</finalName>
     </build>
-
 </project>
