--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>microservice</name>
     <description>Demo project for Spring Boot</description>
     <properties>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
         <java.version>17</java.version>
     </properties>
     <dependencies>
@@ -48,6 +49,16 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
@@ -74,7 +85,6 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
