--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.generated-unique-name=false
 spring.datasource.name=example
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
-
+#
 #spring.datasource.url=jdbc:mariadb://localhost:3306/authdtb
 #spring.datasource.username=root
 #spring.datasource.password=locations
