--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.generated-unique-name=false
-spring.datasource.name=example
+spring.datasource.name=note
 spring.jpa.show-sql=true
 
 #
